--- a/nfs-provisioned-storageclass/01-deployment.yml
+++ b/nfs-provisioned-storageclass/01-deployment.yml
@@ -22,6 +22,7 @@ spec:
       containers:
         - name: nfs-client-provisioner
           image: quay.io/external_storage/nfs-client-provisioner:latest
+          # also pull image from quay.io/alberthua/nfs-client-provisioner:latest
           volumeMounts:
             - name: nfs-client-root
               mountPath: /persistentvolumes
