--- a/rocketchat-mongo-statefulset-app/05-rockerchat-deployment.yml
+++ b/rocketchat-mongo-statefulset-app/05-rockerchat-deployment.yml
@@ -6,7 +6,7 @@ metadata:
     app: rocketchat
   namespace: rocketchat-mongodb-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: rocketchat
@@ -25,9 +25,11 @@ spec:
               value: "3000"
               # use "" to quote port number
             - name: MONGO_URL
-              value: "mongodb://rocketmongo-0.mongodb-internal:27017/rocketchat"
+              #value: "mongodb://rocketmongo-0.mongodb-internal:27017/rocketchat"
+              value: "mongodb://rocketmongo-0.mongodb-internal,rocketmongo-1.mongodb-internal,rocketmongo-2.mongodb-internal:27017/rocketchat"
             - name: MONGO_OPLOG_URL
-              value: "mongodb://rocketmongo-0.mongodb-internal:27017/local?replicaSet=rs0"
+              #value: "mongodb://rocketmongo-0.mongodb-internal:27017/local?replicaSet=rs0"
+              value: "mongodb://rocketmongo-0.mongodb-internal,rocketmongo-1.mongodb-internal,rocketmongo-2.mongodb-internal:27017/local"
           ports:
             - containerPort: 3000
               protocol: TCP
@@ -46,7 +48,8 @@ metadata:
 spec: 
   ports:
     # the port that this service should serve on
-    - port: 30000
+    - nodePort: 30000
+      port: 3000
       targetPort: 3000
       protocol: TCP
   # label keys and values that must match in order to receive traffic for this service
